--- a/app/src/main/res/layout/display_checklists.xml
+++ b/app/src/main/res/layout/display_checklists.xml
@@ -96,6 +96,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                        <EditText
+                           android:id="@+id/additionalDetails"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
