--- a/app/src/main/res/layout/display_checklists.xml
+++ b/app/src/main/res/layout/display_checklists.xml
@@ -37,7 +37,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                     <EditText
-                        android:id="@+id/textView11"
+                        android:id="@+id/etWorkOrder"
                         android:paddingLeft="8dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
