project update commit 28 Dec 12.58 PM

--- a/app/src/main/res/layout/display_checklists.xml
+++ b/app/src/main/res/layout/display_checklists.xml
@@ -46,7 +46,8 @@
 
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:visibility="gone">
                     <EditText
                         android:id="@+id/textView14"
                         android:paddingLeft="8dp"
@@ -66,17 +67,6 @@
                         android:hint="Date/Time" />
                     </android.support.design.widget.TextInputLayout>
 
-                    <android.support.design.widget.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                    <EditText
-                        android:id="@+id/editText"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingLeft="8dp"
-                        android:hint="Other information"
-                        android:inputType="textPersonName" />
-                    </android.support.design.widget.TextInputLayout>
 
                     <TextView
                         android:layout_width="match_parent"
@@ -100,7 +90,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                            android:paddingLeft="8dp"
-                            android:hint="Additional details"/>
+                            android:hint="Additional Details"/>
                     </android.support.design.widget.TextInputLayout>
 
                     <Button
