--- a/app/src/main/res/layout/report_layout.xml
+++ b/app/src/main/res/layout/report_layout.xml
@@ -112,7 +112,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:src="@drawable/ic_action_share"
+            android:src="@drawable/gmail"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
