CODE FOR PROFILE PICTURE

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -30,6 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:layout_weight="1"
+                android:id="@+id/logoLayout"
                 android:background="@color/colorPrimary"
                 android:gravity="left"
                 android:orientation="vertical">
