--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -26,11 +26,11 @@
             android:orientation="vertical">
 
             <android.support.constraint.ConstraintLayout
+                android:id="@+id/logoLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:layout_weight="1"
-                android:id="@+id/logoLayout"
                 android:background="@color/colorPrimary"
                 android:gravity="left"
                 android:orientation="vertical">
@@ -131,6 +131,14 @@
                 android:text="User"
                 android:textColor="@color/colorPrimaryDark" />
 
+            <ImageView
+                android:id="@+id/imageUser"
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/text_size"
+                tools:src="@drawable/user" />
+
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -138,6 +146,7 @@
                 android:layout_weight="1"
                 android:gravity="left|start"
                 android:orientation="horizontal">
+
 
                 <ImageView
                     android:id="@+id/imageView2"
@@ -168,6 +177,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/imageView2"
                     app:layout_constraintTop_toTopOf="@+id/imageView2" />
+
 
             </android.support.constraint.ConstraintLayout>
 
@@ -255,11 +265,11 @@
                 android:id="@+id/btnSave"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/blue_rounded"
-                android:text="SAVE"
                 android:layout_gravity="center"
                 android:layout_margin="@dimen/text_size"
-                android:textColor="#fff"/>
+                android:background="@drawable/blue_rounded"
+                android:text="SAVE"
+                android:textColor="#fff" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
