project update commit 3 Jan 7.29 PM

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,7 +99,7 @@
             app:layout_constraintBottom_toBottomOf="@+id/textView5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/textView2"
-            app:srcCompat="@drawable/cloudsearching" />
+            app:srcCompat="@drawable/checklist" />
 
     </android.support.constraint.ConstraintLayout>
     <View
