project update commit 5 Jan 10.26 PM

--- a/app/src/main/res/layout/report_layout.xml
+++ b/app/src/main/res/layout/report_layout.xml
@@ -106,6 +106,20 @@
             android:textStyle="bold" /-->
 
         <ImageView
+            android:id="@+id/ivStatus"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:src="@drawable/cloud_s"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/ivShare"
+            />
+
+
+
+        <ImageView
             android:id="@+id/ivShare"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
