--- a/app/src/main/res/layout/checklist_layout.xml
+++ b/app/src/main/res/layout/checklist_layout.xml
@@ -114,6 +114,20 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+
+        <ImageView
+            android:id="@+id/ivStatus"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:src="@drawable/cloud_s"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/ivShare"
+android:visibility="gone"            />
+
+
         <ImageView
         android:id="@+id/ivShare"
         android:layout_width="wrap_content"
