--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.8">
+        android:layout_weight="1">
 
         <com.thatapp.checklists.ModelClasses.CustomBackgroundIV
             android:id="@+id/customBackgroundIV"
@@ -56,7 +56,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/customBackgroundIV"
-            app:srcCompat="@drawable/checklist" />
+            app:srcCompat="@drawable/cloud_main" />
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline"
@@ -66,11 +66,12 @@
             app:layout_constraintGuide_percent="0.85" />
 
     </android.support.constraint.ConstraintLayout>
+
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/downloadAndSyncLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.2"
-        android:id="@+id/downloadAndSyncLayout">
+        android:layout_weight="0.15">
 
         <TextView
             android:id="@+id/textView2"
@@ -117,10 +118,10 @@
         tools:layout_editor_absoluteY="342dp" />
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/myProfileLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.2"
-        android:id="@+id/myProfileLayout">
+        android:layout_weight="0.15">
 
         <TextView
             android:id="@+id/textView3"
@@ -170,7 +171,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.2">
+        android:layout_weight="0.1">
 
         <TextView
             android:id="@+id/textView4"
