--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             android:layout_height="0dp"
             android:layout_weight="1">
 
-            <com.thatapp.checklists.ModelClasses.CustomBackgroundIV
+            <com.thatapp.checklist.ModelClasses.CustomBackgroundIV
                 android:id="@+id/customBackgroundIV"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
