--- a/app/src/main/res/layout/activity_instructions.xml
+++ b/app/src/main/res/layout/activity_instructions.xml
@@ -6,7 +6,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 <android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".ViewClasses.InstructionsActivity">
 
 
@@ -18,7 +18,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/blue_rounded"
-        android:text="Click to share template!"
+        android:text="@string/click_to_share_template"
         android:textColor="@color/WHITE"
         android:textSize="14sp"
         android:textStyle="italic"
@@ -39,7 +39,8 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appVersion"
-        app:srcCompat="@drawable/cloudcheck" />
+        app:srcCompat="@drawable/cloudcheck"
+        android:contentDescription="TODO" />
 
     <TextView
         android:id="@+id/textView15"
